test/sc++/error/forall-array-square.scpp
../../scc/error/forall-array-square.sc